[B]2.4.0[/B]
Changed: Language is now a selection list

[B]2.3.1[/B]
Fixed: scraping multiartis releases, and releases that may feature an artist named differently in musicbrainz.

[B]2.3.0[/B]
Added: Scraping Styles and Moods from TheAudioDb.com

[B]2.2.6[/B]
Updated language files from Transifex

[B]2.2.5[/B]
Fixed: allow multiple secondary-type's (thanks and credits to elrodro83)
Fixed: won't get details for an album when a release of another type (single or compilation) with the same name exists (thanks and credits to elrodro83)

[B]2.2.4[/B]
Fix album releases with the "Packaging" field populated on MB (thanks and credits to elrodro83)

[B]2.2.3[/B]
Updated language files from Transifex

[B]2.2.2[/B]
Fixed: Re-prioritize Official albums in search results

[B]2.2.1[/B]
Fixed: Include albums of any status in search results

[B]2.2.0[/B]
Added: 2 new languages
Removed: last.fm completely

[B]2.1.0[/B]
Added: option to fetch album Rating from TheAudioDB.com

[B]2.0.0[/B]
Added: ResolveIDToUrl
Fixed: album won't find some times (thanks and credits to crankylemur & ezechiel1917)

[B]1.7.6[/B]
Updated language files from Transifex

[B]1.7.5[/B]
Re-aply changes in 1.7.3 what lost in space with 1.7.4

[B]1.7.4[/B]
Changed: tighten search query and trust musicbrainz results sorting

[B]1.7.3[/B]
Fixed: album won't find some times (thanks and credits to crankylemur)

[B]1.7.2[/B]
Fix settings after last.fm removal

[B]1.7.1[/B]
Disable last.fm options because last.fm is now truncating biogs

[B]1.7.0[/B]
Added: option to select language from TheAudioDB.com
Added back the option to scrape from last.fm

[B]1.6.4[/B]
Disable last.fm options because last.fm suspended XBMC's API account

[B]1.6.3[/B]
Updated language files from Transifex

[B]1.6.2[/B]
Updated language files from Transifex

[B]1.6.1[/B]
Language files update from Transifex

[B]1.6.0[/B]
Re-enable fanart.tv scraping by default

[B]1.5.0[/B]
Added: Scraping album thumbs from theaudiodb.com

[B]1.4.0[/B]