@@ -1,66 +1,0 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<scraperfunctions>
-	<GetHDTrailersnet480p dest="3">
-		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse480pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1&lt;/url&gt;&lt;/details&gt;" dest="3">
-			<RegExp input="$$1" output="\1-" dest="6">
-				<expression repeat="yes" trim="1">([\w]+)</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</GetHDTrailersnet480p>
-	<GetHDTrailersnet720p dest="3">
-		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse720pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1&lt;/url&gt;&lt;/details&gt;" dest="3">
-			<RegExp input="$$1" output="\1-" dest="6">
-				<expression repeat="yes" trim="1">([\w]+)</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</GetHDTrailersnet720p>
-	<GetHDTrailersnet1080p dest="3">
-		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse1080pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1&lt;/url&gt;&lt;/details&gt;" dest="3">
-			<RegExp input="$$1" output="\1-" dest="6">
-				<expression repeat="yes" trim="1">([\w]+)</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</GetHDTrailersnet1080p>
-	<Parse480pTrailer dest="5">
-		<RegExp input="$$6" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
-			<!--fetch 480p trailer link from hdtrailers.net-->
-			<RegExp input="$$1" output="&lt;trailer&gt;http://pdl.stream.aol.com/\1&lt;/trailer&gt;" dest="6">
-				<expression noclean="1">http://pdl\.stream\.aol\.com/([^&quot;]*?_480p_dl.mov)"\srel=&quot;lightbox\[res480p</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</Parse480pTrailer>
-	<Parse720pTrailer dest="5">
-		<RegExp input="$$6" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
-			<!--Fallback to fetch 480p trailer link if 720p is not available-->
-			<RegExp input="$$1" output="&lt;trailer&gt;http://pdl.stream.aol.com/\1&lt;/trailer&gt;" dest="6">
-				<expression noclean="1">http://pdl\.stream\.aol\.com/([^&quot;]*?_480p_dl.mov)"\srel=&quot;lightbox\[res480p</expression>
-			</RegExp>
-			<!--Fetch 720p trailer link from hdtrailers.net-->
-			<RegExp input="$$1" output="&lt;trailer&gt;http://pdl.stream.aol.com/\1&lt;/trailer&gt;" dest="6">
-				<expression noclean="1">http://pdl\.stream\.aol\.com/([^&quot;]*?_720p_dl.mov)"\srel=&quot;lightbox\[res720p</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</Parse720pTrailer>
-	<Parse1080pTrailer dest="5">
-		<RegExp input="$$6" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
-			<!--Fallback to fetch 480p trailer link if 720p and 1080p are not available-->
-			<RegExp input="$$1" output="&lt;trailer&gt;http://pdl.stream.aol.com/\1&lt;/trailer&gt;" dest="6">
-				<expression noclean="1">http://pdl\.stream\.aol\.com/([^&quot;]*?_480p_dl.mov)"\srel=&quot;lightbox\[res480p</expression>
-			</RegExp>
-			<!--Fetch 720p trailer link from hdtrailers.net-->
-			<RegExp input="$$1" output="&lt;trailer&gt;http://pdl.stream.aol.com/\1&lt;/trailer&gt;" dest="6">
-				<expression noclean="1">http://pdl\.stream\.aol\.com/([^&quot;]*?_720p_dl.mov)"\srel=&quot;lightbox\[res720p</expression>
-			</RegExp>
-			<!--Fetch 1080p trailer link from hdtrailers.net-->
-			<RegExp input="$$1" output="&lt;trailer&gt;http://pdl.stream.aol.com/\1&lt;/trailer&gt;" dest="6">
-				<expression noclean="1">http://pdl\.stream\.aol\.com/([^&quot;]*?_1080p_dl.mov)"\srel=&quot;lightbox\[res1080p</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</Parse1080pTrailer>
-</scraperfunctions>
