@@ -113,24 +113,6 @@
 			<RegExp conditional="trailer" input="$$2" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression />
 			</RegExp>
-			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet480p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
-				<RegExp input="$$1" output="\1" dest="6">
-					<expression clear="yes" noclean="1">&quot;original_title&quot;:&quot;([^&quot;]*)</expression>
-				</RegExp>
-				<expression>480p</expression>
-			</RegExp>
-			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet720p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
-				<RegExp input="$$1" output="\1" dest="6">
-					<expression clear="yes" noclean="1">&quot;original_title&quot;:&quot;([^&quot;]*)</expression>
-				</RegExp>
-				<expression>720p</expression>
-			</RegExp>
-			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet1080p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
-				<RegExp input="$$1" output="\1" dest="6">
-					<expression clear="yes" noclean="1">&quot;original_title&quot;:&quot;([^&quot;]*)</expression>
-				</RegExp>
-				<expression>1080p</expression>
-			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
 	</GetDetails>
